--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
 <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 
+<h1>Test Test Test</h1>
